--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0-next.91",
+		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.0.0-next.589",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
@@ -24,17 +24,17 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.53.1",
-		"svelte-check": "^2.9.2",
-		"svelte-preprocess": "^4.10.7",
+		"svelte-check": "^3.2.0",
+		"svelte-preprocess": "^5.0.3",
 		"tailwindcss": "^3.2.4",
 		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^3.2.4"
+		"typescript": "^5.0.4",
+		"vite": "^4.3.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.8",
-		"appwrite": "^10.2.0",
+		"appwrite": "^11.0.0",
 		"svelte-kit-cookie-session": "^3.2.2"
 	}
 }
